[fix] Make blurry footer clear

--- a/css/master.css
+++ b/css/master.css
@@ -3041,6 +3041,9 @@ strong {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  -webkit-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 @media only screen and (max-width: 768px) {
   .attribution {
