--- a/src/assets/css/_footer.styl
+++ b/src/assets/css/_footer.styl
@@ -33,6 +33,7 @@
     float none
 .attribution
   align(both)
+  transform-style: preserve-3d
   +below(med-snap)
     position static
     width 100%
